<resources>
    <string name="Playback_failed">播放失败</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_gone_tips">是否确定注销账户，注销完将不能继续使用</string>
    <string name="androidx_camera_default_config_provider">androidx.camera.camera2.Camera2Config$DefaultProvider</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anythink_basead_ad_text">AD</string>
    <string name="anythink_basead_click_empty">This ads does not support click to open</string>
    <string name="anythink_basead_click_fail">Failed to open Ads</string>
    <string name="anythink_btn_cancel">Cancel</string>
    <string name="anythink_btn_install">Install</string>
    <string name="anythink_btn_install_tip">You have downloaded the %s. Do you want to install it now?</string>
    <string name="anythink_btn_open">Open</string>
    <string name="anythink_btn_open_tip">You have installed the %s. Do you want to open it now?</string>
    <string name="anythink_confirm_dialog_application_desc">desc</string>
    <string name="anythink_confirm_dialog_application_permission">permission</string>
    <string name="anythink_confirm_dialog_download_now">Download</string>
    <string name="anythink_confirm_dialog_give_up">Give up</string>
    <string name="anythink_confirm_dialog_privacy_agreement">privacy</string>
    <string name="anythink_confirm_dialog_publisher">%s</string>
    <string name="anythink_confirm_dialog_version">v%s</string>
    <string name="anythink_cta_download_finished">Install now</string>
    <string name="anythink_cta_download_installed">Open now</string>
    <string name="anythink_cta_download_paused">Continue Download</string>
    <string name="anythink_cta_downloading">Downloading</string>
    <string name="anythink_interstitial_text_loading_default">The ad is loading...</string>
    <string name="anythink_location_allow">Allow</string>
    <string name="anythink_location_ask_title">Allow access your location？</string>
    <string name="anythink_location_deny">Disallow</string>
    <string name="anythink_myoffer_anim_reward_exit_confirm_continue">Continue</string>
    <string name="anythink_myoffer_anim_reward_exit_confirm_msg">Watch the ad for %s seconds to get rewards, are you sure you want to leave?</string>
    <string name="anythink_myoffer_confirm_msg">Open</string>
    <string name="anythink_myoffer_continue">Continue</string>
    <string name="anythink_myoffer_count_down_finish_rewarded">You have been rewarded</string>
    <string name="anythink_myoffer_count_down_to_rewarded">View for &lt;font color=#FFFFFF&gt;%d&lt;/font&gt; seconds to get the reward</string>
    <string name="anythink_myoffer_cta_install_now">Install Now</string>
    <string name="anythink_myoffer_cta_learn_more">Learn More</string>
    <string name="anythink_myoffer_feedback_abnormal">Abnormal</string>
    <string name="anythink_myoffer_feedback_black_white_screen">Show Failed</string>
    <string name="anythink_myoffer_feedback_can_not_close">Not Close</string>
    <string name="anythink_myoffer_feedback_fraud_ads">Fraud Ads</string>
    <string name="anythink_myoffer_feedback_hint">Please enter the suggestion first! Suggestion is within 100 words</string>
    <string name="anythink_myoffer_feedback_induce_click">Induce Click</string>
    <string name="anythink_myoffer_feedback_not_interesting">Boring</string>
    <string name="anythink_myoffer_feedback_plagiarism">Plagiarism</string>
    <string name="anythink_myoffer_feedback_report">Report</string>
    <string name="anythink_myoffer_feedback_submit">Submit</string>
    <string name="anythink_myoffer_feedback_suggestion">Suggestion</string>
    <string name="anythink_myoffer_feedback_text">Feedback</string>
    <string name="anythink_myoffer_feedback_video_freeze">Video Freeze</string>
    <string name="anythink_myoffer_feedback_violation_of_laws">Illegal</string>
    <string name="anythink_myoffer_feedback_vulgar_porn">Vulgar porn</string>
    <string name="anythink_myoffer_g2c_fuu_ori_hint">Slide to jump</string>
    <string name="anythink_myoffer_g2c_fuu_ori_hint_small">Slide to jump</string>
    <string name="anythink_myoffer_g2c_hint_text">You can click the content below or the button to get more details</string>
    <string name="anythink_myoffer_g2c_jump_confirm_hint_text1">Ignore ads to view details</string>
    <string name="anythink_myoffer_g2c_jump_confirm_hint_text2">continue when you return</string>
    <string name="anythink_myoffer_g2c_jump_confirm_ignore">Ignore</string>
    <string name="anythink_myoffer_g2c_question_dialog_default_answer">AD</string>
    <string name="anythink_myoffer_g2c_question_dialog_hint">Note: Please select and browse the relevant content</string>
    <string name="anythink_myoffer_g2c_question_dialog_title">Which option does the video content relate to?</string>
    <string name="anythink_myoffer_g2c_seek_to_click">Drag to complete the puzzle</string>
    <string name="anythink_myoffer_g2c_slide_to_click">Swipe to view more</string>
    <string name="anythink_myoffer_give_up">Cancel</string>
    <string name="anythink_myoffer_intercept_web_file_download">This Download isn\'t supported.</string>
    <string name="anythink_myoffer_minor_cta_text">Learn More</string>
    <string name="anythink_myoffer_next_step">Next</string>
    <string name="anythink_myoffer_panel_disclaimer">Disclaimer</string>
    <string name="anythink_myoffer_panel_funtion">Desc</string>
    <string name="anythink_myoffer_panel_permission">Permission</string>
    <string name="anythink_myoffer_panel_privacy">Privacy</string>
    <string name="anythink_myoffer_panel_version">v%s</string>
    <string name="anythink_myoffer_red_packet_bless_text">Best wishs</string>
    <string name="anythink_myoffer_red_packet_cta_text">Recieve Now</string>
    <string name="anythink_myoffer_red_packet_currency">USD</string>
    <string name="anythink_myoffer_red_packet_hint_link4_text">Deposited to Balance, Download to Receive</string>
    <string name="anythink_myoffer_red_packet_hint_linkother_text">Deposited to Balance, View More to Receive</string>
    <string name="anythink_myoffer_red_packet_title_text">Red Packet from %s</string>
    <string name="anythink_myoffer_reward_exit_confirm_continue">Continue</string>
    <string name="anythink_myoffer_reward_exit_confirm_give_up">Give up</string>
    <string name="anythink_myoffer_reward_exit_confirm_msg">Watch the video for %s seconds to get rewards. Are you sure you want to leave?</string>
    <string name="anythink_myoffer_reward_exit_tips_msg">Incomplete viewing,no rewards.</string>
    <string name="anythink_myoffer_reward_tips">%d s left</string>
    <string name="anythink_myoffer_reward_tips_rewarded">Rewarded</string>
    <string name="anythink_myoffer_rp_second_endcard_title">Immediate WeChat Withdrawal</string>
    <string name="anythink_myoffer_rp_second_hint_link4_text">Download Now</string>
    <string name="anythink_myoffer_rp_second_hint_linkother_text">View to Withdraw</string>
    <string name="anythink_myoffer_second_endcard_title">Beyond Expectation</string>
    <string name="anythink_myoffer_shake_desc">Redirect to third-party App</string>
    <string name="anythink_myoffer_shake_full_title">Sway or tap for it</string>
    <string name="anythink_myoffer_shake_full_title2">Sway to get</string>
    <string name="anythink_myoffer_shake_simple_title">Sway to jump</string>
    <string name="anythink_myoffer_shake_simple_title2">Sway</string>
    <string name="anythink_myoffer_shake_title">Shake your phone</string>
    <string name="anythink_myoffer_slide_hint">Swipe to view</string>
    <string name="anythink_myoffer_special_note_cancel">Cancel</string>
    <string name="anythink_myoffer_special_note_delay_click">Jump after &lt;font color=#FFFFFF&gt;%d&lt;/font&gt; s</string>
    <string name="anythink_myoffer_special_note_delay_click_simple">Jump after &lt;font color=#FFFFFF&gt;%d&lt;/font&gt; s</string>
    <string name="anythink_myoffer_splash_skip_text">Skip</string>
    <string name="anythink_myoffer_sub_close_default_skip_text">Continue</string>
    <string name="anythink_myoffer_sub_close_default_text">Close</string>
    <string name="anythink_myoffer_sub_close_default_title">Explore More</string>
    <string name="anythink_myoffer_tap_for_detail">Tap for details</string>
    <string name="anythink_myoffer_video_paly_fail_tips">Play failed</string>
    <string name="anythink_myoffer_webview_reload">Reload Ad.</string>
    <string name="anythink_notification_click_to_install">Click to install</string>
    <string name="anythink_notification_click_to_open">Click to open</string>
    <string name="anythink_notification_click_to_retry">Download failed, click to retry</string>
    <string name="anythink_notification_continue_to_download">Click to continue downloading</string>
    <string name="anythink_notification_in_download">（Downloading: %s%%)</string>
    <string name="anythink_notification_in_download_or_pause">Click to pause download(Downloading: %s%%)</string>
    <string name="anythink_notification_waiting_for_download">Waiting for download</string>
    <string name="anythink_notification_waiting_for_download_or_pause">Waiting for download (click to pause)</string>
    <string name="anythink_sample_dialog_confirm">Yes</string>
    <string name="anythink_sample_dialog_download_app">Download %s?</string>
    <string name="anythink_sample_dialog_give_up">Give up</string>
    <string name="anythink_web_land_page_dialog_stay">STAY</string>
    <string name="anythink_web_land_page_dialog_title">Do you really want to exit?</string>
    <string name="cancel_easy_photos">取消</string>
    <string name="done_easy_photos">完成</string>
    <string name="empty_easy_photos">清空</string>
    <string name="original_easy_photos">原图</string>
    <string name="picture_selection_easy_photos">图片选择</string>
    <string name="puzzle_easy_photos">拼一张</string>
    <string name="selector_folder_all_easy_photos">所有图片</string>
    <string name="selector_preview_easy_photos">预览</string>
    <string name="template_easy_photos">模板</string>
    <string name="text_sticker_easy_photos">文字</string>
</resources>