<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal" android:id="@+id/anythink_myoffer_four_element_container" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.anythink.basead.ui.CloseImageView android:id="@+id/anythink_myoffer_banner_close" android:background="#a0a0a0" android:padding="1dp" android:layout_width="10dp" android:layout_height="10dp" android:src="@drawable/anythink_browser_close_icon" android:tint="#ffffff" android:layout_alignParentTop="true" android:layout_alignParentRight="true"/>
    <TextView android:textSize="6dp" android:textColor="#a0a0a0" android:id="@+id/anythink_myoffer_publisher_name" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="1dp" android:layout_marginRight="3dp" android:layout_toLeftOf="@+id/anythink_myoffer_banner_close" android:layout_alignParentTop="true"/>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_alignParentBottom="true">
        <TextView android:textSize="6dp" android:textColor="#a0a0a0" android:id="@+id/anythink_myoffer_version_name" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="3dp" android:layout_toLeftOf="@+id/anythink_myoffer_privacy_agreement" android:layout_alignParentBottom="true"/>
        <TextView android:textSize="6dp" android:textColor="#a0a0a0" android:id="@+id/anythink_myoffer_privacy_agreement" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/anythink_myoffer_panel_privacy" android:layout_toLeftOf="@+id/anythink_myoffer_banner_center_line" android:layout_alignParentBottom="true"/>
        <View android:id="@+id/anythink_myoffer_banner_center_line" android:background="#a0a0a0" android:visibility="gone" android:layout_width="1dp" android:layout_height="7dp" android:layout_marginLeft="3dp" android:layout_marginRight="3dp" android:layout_toLeftOf="@+id/anythink_myoffer_permission_manage" android:layout_alignParentBottom="true"/>
        <TextView android:textSize="6dp" android:textColor="#a0a0a0" android:id="@+id/anythink_myoffer_permission_manage" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/anythink_myoffer_panel_permission"/>
        <View android:id="@+id/anythink_myoffer_banner_center_line2" android:background="#a0a0a0" android:visibility="gone" android:layout_width="1dp" android:layout_height="7dp" android:layout_marginLeft="3dp" android:layout_marginRight="3dp" android:layout_toLeftOf="@+id/anythink_myoffer_permission_manage" android:layout_alignParentBottom="true"/>
        <TextView android:textSize="6dp" android:textColor="#a0a0a0" android:id="@+id/anythink_myoffer_function_manage" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/anythink_myoffer_panel_funtion"/>
        <com.anythink.core.common.ui.component.RoundImageView android:id="@+id/anythink_myoffer_banner_self_ad_logo" android:visibility="gone" android:layout_width="@dimen/anythink_myoffer_banner_ad_logo_width_xs" android:layout_height="@dimen/anythink_myoffer_banner_ad_logo_height_xs" android:layout_marginLeft="6dp" android:layout_marginRight="6dp"/>
    </LinearLayout>
</RelativeLayout>
