<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/coordinator" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@color/easy_photos_bg_primary" android:layout_width="match_parent" android:layout_height="match_parent">
        <View android:id="@+id/m_tool_bar" android:background="@color/easy_photos_bar_primary" android:layout_width="0dp" android:layout_height="@dimen/toolbar_size_easy_photos" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_photos" android:scrollbars="vertical" android:layout_width="0dp" android:layout_height="0dp" app:layout_constraintBottom_toTopOf="@+id/m_bottom_bar" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/m_tool_bar_bottom_line"/>
        <RelativeLayout android:id="@+id/root_view_album_items" android:background="@color/easy_photos_bar_primary_translation" android:paddingLeft="8dp" android:paddingTop="50dp" android:paddingRight="8dp" android:visibility="gone" android:layout_width="0dp" android:layout_height="0dp" android:paddingStart="8dp" android:paddingEnd="8dp" app:layout_constraintBottom_toTopOf="@+id/m_bottom_bar" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/m_tool_bar">
            <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_album_items" android:background="@drawable/bg_dialog_album_items_background_easy_photos" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <LinearLayout android:orientation="horizontal" android:id="@+id/m_second_level_menu" android:paddingLeft="16dp" android:paddingRight="16dp" android:paddingBottom="8dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="16dp" android:paddingEnd="16dp" app:layout_constraintBottom_toTopOf="@+id/m_bottom_bar" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0">
            <TextView android:textColor="@color/easy_photos_fg_primary" android:gravity="center" android:id="@+id/tv_original" android:background="@drawable/bg_second_level_menu_easy_photos" android:padding="8dp" android:focusable="true" android:clickable="true" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="8dp" android:minWidth="80dp" android:text="@string/original_easy_photos" android:layout_weight="1"/>
            <TextView android:textColor="@color/easy_photos_fg_primary" android:gravity="center" android:id="@+id/tv_puzzle" android:background="@drawable/bg_second_level_menu_easy_photos" android:padding="8dp" android:focusable="true" android:clickable="true" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="8dp" android:minWidth="80dp" android:text="@string/puzzle_easy_photos" android:layout_weight="1"/>
            <TextView android:textColor="@color/easy_photos_fg_primary" android:gravity="center" android:id="@+id/tv_clear" android:background="@drawable/bg_second_level_menu_easy_photos" android:padding="8dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="8dp" android:minWidth="80dp" android:text="@string/empty_easy_photos" android:layout_weight="1"/>
        </LinearLayout>
        <View android:id="@+id/m_bottom_bar" android:background="@color/easy_photos_bar_primary" android:layout_width="0dp" android:layout_height="42dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0"/>
        <com.huantansheng.easyphotos.ui.widget.PressedTextView android:textColor="@color/easy_photos_fg_primary" android:gravity="center" android:id="@+id/tv_album_items" android:paddingLeft="16dp" android:paddingRight="6dp" android:layout_width="wrap_content" android:layout_height="0dp" android:minWidth="70dp" android:text="@string/selector_folder_all_easy_photos" android:paddingStart="16dp" android:paddingEnd="6dp" app:layout_constraintBottom_toBottomOf="@+id/m_bottom_bar" app:layout_constraintLeft_toLeftOf="@+id/m_bottom_bar" app:layout_constraintTop_toTopOf="@+id/m_bottom_bar"/>
        <com.huantansheng.easyphotos.ui.widget.PressedImageView android:id="@+id/iv_album_items" android:paddingTop="8dp" android:layout_width="wrap_content" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="@+id/tv_album_items" app:layout_constraintLeft_toRightOf="@+id/tv_album_items" app:layout_constraintTop_toTopOf="@+id/tv_album_items" app:srcCompat="@drawable/ic_album_items_name_easy_photos"/>
        <ImageView android:id="@+id/iv_second_menu" android:padding="13dp" android:layout_width="wrap_content" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="@+id/m_bottom_bar" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="@+id/m_bottom_bar" app:srcCompat="@drawable/ic_edit_easy_photos"/>
        <com.huantansheng.easyphotos.ui.widget.PressedTextView android:textColor="@color/easy_photos_fg_primary" android:gravity="center" android:id="@+id/tv_preview" android:paddingLeft="16dp" android:paddingRight="16dp" android:focusable="true" android:visibility="invisible" android:clickable="true" android:layout_width="wrap_content" android:layout_height="0dp" android:text="@string/selector_preview_easy_photos" android:paddingStart="16dp" android:paddingEnd="16dp" app:layout_constraintBottom_toBottomOf="@+id/m_bottom_bar" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="@+id/m_bottom_bar"/>
        <View android:id="@+id/m_back_line" android:background="@color/easy_photos_bar_primary_dark" android:layout_width="1dp" android:layout_height="18dp" app:layout_constraintBottom_toBottomOf="@+id/m_tool_bar" app:layout_constraintLeft_toRightOf="@+id/iv_back" app:layout_constraintTop_toTopOf="@+id/m_tool_bar"/>
        <View android:id="@+id/m_tool_bar_bottom_line" android:background="@color/easy_photos_bar_primary_dark" android:layout_width="0dp" android:layout_height="1dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/m_tool_bar"/>
        <ImageView android:id="@+id/iv_back" android:padding="10dp" android:layout_width="42dp" android:layout_height="42dp" app:layout_constraintBottom_toBottomOf="@+id/m_tool_bar" app:layout_constraintLeft_toLeftOf="@+id/m_tool_bar" app:layout_constraintTop_toTopOf="@+id/m_tool_bar" app:srcCompat="@drawable/ic_arrow_back_easy_photos"/>
        <TextView android:textColor="@color/easy_photos_fg_primary" android:gravity="center" android:id="@+id/tv_title" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="0dp" android:layout_marginLeft="16dp" android:text="@string/picture_selection_easy_photos" android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="@+id/m_tool_bar" app:layout_constraintLeft_toLeftOf="@+id/m_back_line" app:layout_constraintTop_toTopOf="@+id/m_tool_bar"/>
        <com.huantansheng.easyphotos.ui.widget.PressedTextView android:textSize="12sp" android:textStyle="bold" android:textColor="@color/menu_text_easy_photos" android:gravity="center" android:id="@+id/tv_done" android:background="@drawable/bg_menu_done_easy_photos" android:padding="6dp" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="@+id/m_tool_bar" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="@+id/m_tool_bar"/>
        <RelativeLayout android:id="@+id/rl_permissions_view" android:background="@color/easy_photos_fg_primary" android:visibility="gone" android:layout_width="0dp" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/m_tool_bar_bottom_line">
            <TextView android:textStyle="bold" android:textColor="@color/easy_photos_fg_accent" android:id="@+id/tv_permission" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true"/>
            <ImageView android:layout_width="32dp" android:layout_height="32dp" android:layout_marginBottom="16dp" android:layout_above="@+id/tv_permission" android:layout_centerHorizontal="true" app:srcCompat="@drawable/ic_notifications_easy_photos"/>
        </RelativeLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/fab_camera" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16dp" app:backgroundTint="@color/easy_photos_bar_primary_translation" app:borderWidth="0dp" app:elevation="1dp" app:fabSize="0" app:layout_constraintBottom_toTopOf="@+id/m_bottom_bar" app:layout_constraintRight_toRightOf="0" app:srcCompat="@drawable/ic_camera_easy_photos"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
