<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@color/easy_photos_bg_primary" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/m_root_view" android:layout_width="match_parent" android:layout_height="match_parent">
        <com.huantansheng.easyphotos.models.puzzle.PuzzleView android:id="@+id/puzzle_view" android:background="@color/white_easy_photos" android:layout_width="match_parent" android:layout_height="match_parent"/>
        <RelativeLayout android:id="@+id/m_bottom_layout" android:background="@color/easy_photos_bar_primary_translation" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <com.huantansheng.easyphotos.models.puzzle.DegreeSeekBar android:id="@+id/degree_seek_bar" android:visibility="gone" android:layout_width="match_parent" android:layout_height="42dp" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:layout_alignParentTop="true"/>
            <LinearLayout android:orientation="horizontal" android:id="@+id/ll_menu" android:paddingTop="8dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="32dp" android:layout_below="@+id/degree_seek_bar">
                <ImageView android:id="@+id/iv_replace" android:padding="2dp" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" app:srcCompat="@drawable/ic_puzzle_replace_easy_photos"/>
                <ImageView android:id="@+id/iv_rotate" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" app:srcCompat="@drawable/ic_puzzle_rotate_easy_photos"/>
                <ImageView android:id="@+id/iv_mirror" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" app:srcCompat="@drawable/ic_puzzle_mirror_easy_photos"/>
                <ImageView android:id="@+id/iv_flip" android:padding="1dp" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" app:srcCompat="@drawable/ic_puzzle_flip_easy_photos"/>
                <ImageView android:id="@+id/iv_corner" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" app:srcCompat="@drawable/ic_puzzle_corner_easy_photos"/>
                <ImageView android:id="@+id/iv_padding" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" app:srcCompat="@drawable/ic_puzzle_padding_easy_photos"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_puzzle_template" android:paddingTop="6dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/ll_menu"/>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/rv_puzzle_template">
                <TextView android:textSize="12sp" android:textColor="@color/easy_photos_fg_accent" android:gravity="center" android:id="@+id/tv_template" android:padding="12dp" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/template_easy_photos" android:layout_weight="1"/>
                <TextView android:textSize="12sp" android:textColor="@color/easy_photos_fg_primary" android:gravity="center" android:id="@+id/tv_text_sticker" android:padding="12dp" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/text_sticker_easy_photos" android:layout_weight="1"/>
            </LinearLayout>
        </RelativeLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/fab" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16dp" android:layout_above="@+id/m_bottom_layout" android:layout_alignParentRight="true" android:layout_alignWithParentIfMissing="true" android:layout_alignParentEnd="true" app:backgroundTint="@color/easy_photos_bar_primary_translation" app:borderWidth="0dp" app:elevation="8dp" app:fabSize="1" app:srcCompat="@drawable/ic_arrow_down_easy_photos"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/m_top_bar" android:layout_width="match_parent" android:layout_height="42dp" android:layout_alignParentTop="true">
        <com.huantansheng.easyphotos.ui.widget.PressedTextView android:textSize="14sp" android:textStyle="bold" android:textColor="@color/easy_photos_fg_primary" android:gravity="center" android:id="@+id/tv_back" android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/cancel_easy_photos" android:layout_alignParentLeft="true" android:paddingStart="16dp" android:paddingEnd="16dp" android:layout_alignParentStart="true"/>
        <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="@color/easy_photos_fg_accent" android:gravity="center" android:id="@+id/tv_done" android:padding="6dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8dp" android:maxWidth="200dp" android:minWidth="56dp" android:text="@string/done_easy_photos" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_marginEnd="8dp" android:layout_alignParentEnd="true"/>
        <ProgressBar android:id="@+id/progress" android:visibility="invisible" android:layout_width="16dp" android:layout_height="16dp" android:layout_marginRight="20dp" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_marginEnd="20dp" android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <FrameLayout android:id="@+id/progress_frame" android:focusable="true" android:visibility="invisible" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent"/>
</RelativeLayout>
